syntax = 'proto3';

package proto;

import "common.proto";

option go_package = "light-up-backend/authentication-service/proto";

service AuthenticationService {
    rpc LoginLightSeeker (LoginRequest) returns (LoginResponse) {}
    rpc LoginLighter (LoginRequest) returns (LoginResponse) {}
    rpc ValidateToken(TokenValidationRequest) returns (TokenResponse) {}
}

message LoginRequest{
    string email = 1;
    string password = 2;
    string type = 3;
}

message LoginResponse{
    string token = 1;
    string message = 2;
}

message  TokenValidationRequest {
    string token = 1;
    repeated UserTypes userType = 2;
}

message TokenResponse {
    Token result = 1;
}

message Token {
    string token = 1;
    bool valid = 2;
    Error error = 3;
}

message Error {
    int32 code = 1;
    string description = 2;
}